styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .left-item {        
        
    }
    .right-item {
        @apply flex self-end w-full lg:w-1/2 md:w-2/3 lg:mr-8 bg-blue-300
    }
    .user-input {
    @apply w-full p-3 mt-3 rounded-md w-full rounded-md focus:outline-none 
    }

    .wrong {
        @apply p-3 bg-red-200 text-red-600
    }
    .error {
        @apply mt-4 text-red-500
    }

    
    .filled-btn {
        @apply px-8 py-2 bg-yellow-600 text-sm text-white rounded-3xl font-normal tracking-tight transition duration-200
                hover:bg-yellow-500
                active:bg-yellow-600
                focus:outline-none
    }
    .outlined-btn {
        @apply px-8 py-2 bg-transparent text-sm text-yellow-700 border-2 border-yellow-600 rounded-3xl font-normal tracking-tight transition duration-200
                hover:bg-yellow-600 hover:text-white
                active:bg-yellow-500
                focus:outline-none
    }
    .disable {
        @apply bg-gray-500
    }
    .card {        
        @apply flex flex-col items-center space-y-8 p-5 rounded-md shadow-md
    }
    .link {
        @apply text-blue-500 hover:underline
    }
    
}
.overlay {
    display: none;
}
.details:hover .overlay {
    display: block;
}
.contact {
    width: 600px;
}
.navigation {
    width: 100vw;
    height: 52px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    font-size: 1.1rem;
    background-color: black;
    position: fixed;
    top: 0;
    left: 0;   
}
.navigation > * {
    margin-right: 15px;
}
.active {
    color: #9CA3AF;
}
@media screen and (max-width: 769px) {
    .contact {
        width: 100%;
    }
    .navigation > * {
        margin-right: 10px;
    }
    .navigation {
        height: 48px;
        font-size: 0.9rem;
    }
}

